Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-3716

Taskmgr shouldn't kill necessary system processes (csrss.exe, services.exe, smss.exe ...etc)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Shell
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      this can be something like ToDo list:

      • Display more CPU usage graphs if more than one CPU is detected
      • Taskmgr.exe cant kill necessary system process (e.g. csrss.exe, services.exe, smss.exe)

      Attachments

        Issue Links

          Activity

            People

              Z98 Z98
              Kario Kario
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: