[TASKMGR] Prevent task manager from killing critical processes. Patch by Ismael Ferreras Morezuelas. CORE-3716

svn path=/trunk/; revision=65624