reactos/base/applications/taskmgr/endproc.c
@@ -3,8 +3,9 @@
  *
  *  endproc.c
  *
- *  Copyright (C) 1999 - 2001  Brian Palmer  <brianp@reactos.org>
- *                2005         Klemens Friedl <frik85@reactos.at>
+ *  Copyright (C) 1999 - 2001  Brian Palmer               <brianp@reactos.org>
+ *                2005         Klemens Friedl             <frik85@reactos.at>
+ *                2014         Ismael Ferreras Morezuelas <swyterzone+ros@gmail.com>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -22,6 +23,8 @@
  */
 
 #include "precomp.h"
+#include <psdk/stierr.h>
+#include <psdk/winternl.h>
 
 void ProcessPage_OnEndProcess(void)
 {
@@ -35,29 +38,68 @@ void ProcessPage_OnEndProcess(void)
     if (dwProcessId == 0)
         return;
 
+    hProcess = OpenProcess(PROCESS_TERMINATE | PROCESS_QUERY_INFORMATION, FALSE, dwProcessId);
+
+    /* forbid killing system processes even if we have privileges -- sigh, windows kludge! */
+    if (hProcess && IsCriticalProcess(hProcess))
+    {
+        LoadStringW(hInst, IDS_MSG_UNABLETERMINATEPRO, szTitle, 256);
+        LoadStringW(hInst, IDS_MSG_CLOSESYSTEMPROCESS, strErrorText, 256);
+        MessageBoxW(hMainWnd, strErrorText, szTitle, MB_OK|MB_ICONWARNING|MB_TOPMOST);
+        return;
+    }
+
+    /* if this is a standard process just ask for confirmation before doing it */
     LoadStringW(hInst, IDS_MSG_WARNINGTERMINATING, strErrorText, 256);
     LoadStringW(hInst, IDS_MSG_TASKMGRWARNING, szTitle, 256);
-    if (MessageBoxW(hMainWnd, strErrorText, szTitle, MB_YESNO|MB_ICONWARNING) != IDYES)
+    if (MessageBoxW(hMainWnd, strErrorText, szTitle, MB_YESNO|MB_ICONWARNING|MB_TOPMOST) != IDYES)
         return;
 
-    hProcess = OpenProcess(PROCESS_TERMINATE, FALSE, dwProcessId);
-
+    /* no such process or not enough privileges to open its token */
     if (!hProcess)
     {
         GetLastErrorText(strErrorText, 260);
         LoadStringW(hInst, IDS_MSG_UNABLETERMINATEPRO, szTitle, 256);
-        MessageBoxW(hMainWnd, strErrorText, szTitle, MB_OK|MB_ICONSTOP);
+        MessageBoxW(hMainWnd, strErrorText, szTitle, MB_OK|MB_ICONSTOP|MB_TOPMOST);
         return;
     }
 
+    /* try to kill it, and notify the user if didn't work */
     if (!TerminateProcess(hProcess, 1))
     {
         GetLastErrorText(strErrorText, 260);
         LoadStringW(hInst, IDS_MSG_UNABLETERMINATEPRO, szTitle, 256);
-        MessageBoxW(hMainWnd, strErrorText, szTitle, MB_OK|MB_ICONSTOP);
+        MessageBoxW(hMainWnd, strErrorText, szTitle, MB_OK|MB_ICONSTOP|MB_TOPMOST);
     }
 
     CloseHandle(hProcess);
+}
+
+BOOL IsCriticalProcess(HANDLE hProcess)
+{
+    NTSTATUS status;
+    ULONG BreakOnTermination;
+
+    /* return early if the process handle does not exist */
+    if (!hProcess)
+      return FALSE;
+
+    /* the important system processes that we don't want to let the user
+       kill come marked as critical, this simplifies the check greatly.
+
+       a critical process brings the system down when is terminated:
+       <http://www.geoffchappell.com/studies/windows/win32/ntdll/api/rtl/peb/setprocessiscritical.htm> */
+
+    status = NtQueryInformationProcess(hProcess,
+                                       ProcessBreakOnTermination,
+                                       &BreakOnTermination,
+                                       sizeof(ULONG),
+                                       NULL);
+
+    if (NT_SUCCESS(status) && BreakOnTermination)
+      return TRUE;
+    
+    return FALSE;
 }
 
 void ProcessPage_OnEndProcessTree(void)
@@ -72,12 +114,21 @@ void ProcessPage_OnEndProcessTree(void)
     if (dwProcessId == 0)
         return;
 
+    hProcess = OpenProcess(PROCESS_TERMINATE | PROCESS_QUERY_INFORMATION, FALSE, dwProcessId);
+
+    /* forbid killing system processes even if we have privileges -- sigh, windows kludge! */
+    if (hProcess && IsCriticalProcess(hProcess))
+    {
+        LoadStringW(hInst, IDS_MSG_UNABLETERMINATEPRO, szTitle, 256);
+        LoadStringW(hInst, IDS_MSG_CLOSESYSTEMPROCESS, strErrorText, 256);
+        MessageBoxW(hMainWnd, strErrorText, szTitle, MB_OK|MB_ICONWARNING|MB_TOPMOST);
+        return;
+    }
+
     LoadStringW(hInst, IDS_MSG_WARNINGTERMINATING, strErrorText, 256);
     LoadStringW(hInst, IDS_MSG_TASKMGRWARNING, szTitle, 256);
     if (MessageBoxW(hMainWnd, strErrorText, szTitle, MB_YESNO|MB_ICONWARNING) != IDYES)
         return;
-
-    hProcess = OpenProcess(PROCESS_TERMINATE, FALSE, dwProcessId);
 
     if (!hProcess)
     {
